Increase header's z-index - This fixes, the... uhh... out-of-bound elements

--- a/assets/daily-streakers.css
+++ b/assets/daily-streakers.css
@@ -60,6 +60,7 @@ html {
 	box-shadow: 0 0 0.4rem var(--header-shadow);
 	position: sticky;
 	top: 0;
+	z-index: 100;
 }
 
 .header__title {
